--- a/PrimalEditor/PrimalEditor.csproj
+++ b/PrimalEditor/PrimalEditor.csproj
@@ -7,6 +7,7 @@
     <BaseOutputPath>..\x64\</BaseOutputPath>
     <PlatformTarget>x64</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 </Project>
