C++ scripting and script component
-Base class for game script classes - Entity_Script which inherits from entity and updates the behaviour of entity each frame
- In game project we inherit from base class and implement behaviour of that entity
- Registor that class in the engine using a macro

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -15,8 +15,10 @@
     <ClInclude Include="Common\Id.h" />
     <ClInclude Include="Components\ComponentsCommon.h" />
     <ClInclude Include="Components\Entity.h" />
+    <ClInclude Include="Components\Script.h" />
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="EngineAPI\GameEntity.h" />
+    <ClInclude Include="EngineAPI\ScriptComponent.h" />
     <ClInclude Include="EngineAPI\TransformComponent.h" />
     <ClInclude Include="Utilities\MathTypes.h" />
     <ClInclude Include="Utilities\Utilities.h" />
@@ -24,7 +26,9 @@
   <ItemGroup>
     <ClCompile Include="Common\PrimitiveTypes.h" />
     <ClCompile Include="Components\Entity.cpp" />
+    <ClCompile Include="Components\Script.cpp" />
     <ClCompile Include="Components\Transform.cpp" />
+    <ClCompile Include="Core\Main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
