Running the stand-alone game

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClInclude Include="Utilities\MathTypes.h" />
     <ClInclude Include="EngineAPI\ScriptComponent.h" />
     <ClInclude Include="Components\Script.h" />
+    <ClInclude Include="Content\ContentLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\PrimitiveTypes.h" />
@@ -20,5 +21,6 @@
     <ClCompile Include="Components\Script.cpp" />
     <ClCompile Include="Core\Main.cpp" />
     <ClCompile Include="Core\Engine.cpp" />
+    <ClCompile Include="Content\ContentLoader.cpp" />
   </ItemGroup>
 </Project>
