--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClInclude Include="EngineAPI\ScriptComponent.h" />
     <ClInclude Include="Components\Script.h" />
     <ClInclude Include="Content\ContentLoader.h" />
+    <ClInclude Include="Platform\Window.h" />
+    <ClInclude Include="Platform\Platform.h" />
+    <ClInclude Include="Platform\PlatformTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\PrimitiveTypes.h" />
@@ -22,5 +25,6 @@
     <ClCompile Include="Core\Main.cpp" />
     <ClCompile Include="Core\Engine.cpp" />
     <ClCompile Include="Content\ContentLoader.cpp" />
+    <ClCompile Include="Platform\Platform.cpp" />
   </ItemGroup>
 </Project>
