--- a/PrimalEditor/PrimalEditor.csproj
+++ b/PrimalEditor/PrimalEditor.csproj
@@ -8,7 +8,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Configurations>Debug;Release;DebugEditor;ReleaseEditor</Configurations>
+    <Configurations>DebugEditor;ReleaseEditor</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
