--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -41,5 +41,6 @@
     <ClCompile Include="Graphics\Direct3D12\D3D12Resources.cpp" />
     <ClCompile Include="Graphics\Direct3D12\D3D12Surface.cpp" />
     <ClCompile Include="Utilities\FreeList.h" />
+    <ClCompile Include="Graphics\Direct3D12\D3D12Helpers.h" />
   </ItemGroup>
 </Project>
