--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -42,5 +42,6 @@
     <ClCompile Include="Graphics\Direct3D12\D3D12Surface.cpp" />
     <ClCompile Include="Utilities\FreeList.h" />
     <ClCompile Include="Graphics\Direct3D12\D3D12Helpers.h" />
+    <ClCompile Include="Graphics\Direct3D12\D3D12Helpers.cpp" />
   </ItemGroup>
 </Project>
