--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClInclude Include="Graphics\Direct3D12\D3D12Surface.h" />
     <ClInclude Include="Utilities\Vector.h" />
     <ClInclude Include="Graphics\Direct3D12\D3D12Shaders.h" />
+    <ClInclude Include="Graphics\Direct3D12\D3D12GPass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\PrimitiveTypes.h" />
@@ -45,5 +46,6 @@
     <ClCompile Include="Graphics\Direct3D12\D3D12Helpers.h" />
     <ClCompile Include="Graphics\Direct3D12\D3D12Helpers.cpp" />
     <ClCompile Include="Graphics\Direct3D12\D3D12Shaders.cpp" />
+    <ClCompile Include="Graphics\Direct3D12\D3D12GPass.cpp" />
   </ItemGroup>
 </Project>
