--- a/ContentTools/ContentTools.vcxproj.filters
+++ b/ContentTools/ContentTools.vcxproj.filters
@@ -4,8 +4,11 @@
     <ClInclude Include="ToolsCommon.h" />
     <ClInclude Include="PrimitiveMesh.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="FbxImpoter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PrimitiveMesh.cpp" />
+    <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="FbxImporter.cpp" />
   </ItemGroup>
 </Project>
