--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -29,6 +29,8 @@
     <ClInclude Include="Platform\IncludeWindowCpp.h" />
     <ClInclude Include="Utilities\IOStream.h" />
     <ClInclude Include="Graphics\Direct3D12\D3D12Upload.h" />
+    <ClInclude Include="Graphics\Direct3D12\D3D12Content.h" />
+    <ClInclude Include="Content\ContentEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\PrimitiveTypes.h" />
@@ -54,5 +56,6 @@
     <ClCompile Include="Graphics\Direct3D12\D3D12PostProcess.cpp" />
     <ClCompile Include="Platform\Window.cpp" />
     <ClCompile Include="Graphics\Direct3D12\D3D12Upload.cpp" />
+    <ClCompile Include="Graphics\Direct3D12\D3D12Content.cpp" />
   </ItemGroup>
 </Project>
